tests/ui/ast_pool.stderr
error[E0505]: cannot move out of `args` because it is borrowed
  --> $DIR/ast_pool.rs:10:10
   |
8  |     let pool = ast::Pool::new(&args);
   |                               ----- borrow of `args` occurs here
9  | 
10 |     drop(args);
   |          ^^^^ move out of `args` occurs here
11 |     println!("{:?}",pool);
   |                     ---- borrow later used here
